--- a/templates/body.jade
+++ b/templates/body.jade
@@ -10,5 +10,7 @@ body
             a(href="/collections") collection demo
           li
             a(href="/info") more info
+          li
+            a(href="/bootstrap-examples") Bootstrap Examples
   .container
     main(role="page-container")
